--- a/tecolotl-web/src/main/webapp/administracion/profesores.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/profesores.xhtml
@@ -141,7 +141,7 @@
             <div class="uk-card-header">
                 <div class="uk-width-1-3"><h4 class="uk-text-capitalize"><span class="uk-text-middle">Ciclo escolar</span></h4></div>
                 <div class="uk-width-expand uk-text-right panel-icons">
-                    <a href="#" class="uk-icon-link" uk-icon="icon: plus-circle; ratio: 1.5" uk-toggle="target: " uk-tooltip="title:#{administracion['dashboard.button.add']}; pos: left; delay: 2000"/>
+                    <a href="#" class="uk-icon-link" uk-icon="icon: plus-circle; ratio: 1.5" uk-toggle="target: #modal-cicloEscolar" uk-tooltip="title:#{administracion['dashboard.button.add']}; pos: left; delay: 2000"/>
                 </div>
             </div>
             <div class="uk-card-body">
@@ -353,6 +353,26 @@
                         <h:commandButton styleClass="uk-button uk-button-danger uk-modal-close" value="#{boton['remove']}">
 
                         </h:commandButton>
+                    </div>
+                </h:form>
+            </div>
+        </h:panelGroup>
+
+        <h:panelGroup layout="block" id="modal-cicloEscolar" styleClass="uk-modal-container" pt:uk-modal="">
+            <div class="uk-modal-dialog uk-margin-auto-vertical">
+                <h:form id="formulario-modal-cicloEscolar" styleClass="uk-form-stacked">
+                    <div class="uk-modal-header uk-background-secondary">
+                        <p class="uk-h4 uk-text-center uk-text-bold primera-mayuscula letra-titulo">
+                            Nuevo Ciclo Escolar
+                        </p>
+                    </div>
+                    <div class="uk-modal-body">
+                        <div uk-grid="">
+                            <div class="uk-width-1-1@s uk-width-1-6@m">
+                                <label for="fecha1">Inicio</label>
+                                <input type="text" id="fecha1" name="fecha1"/>
+                            </div>
+                        </div>
                     </div>
                 </h:form>
             </div>
